--- a/css/signin.css
+++ b/css/signin.css
@@ -1,12 +1,44 @@
-html {
-  height: 100%;
+/*
+html{
+  background: url(/images/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+margin: 0;
 }
-
+*/
 body {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 0;
   background-color: #eee;
   height: 100%;
+}
+/*
+h2 {
+  text-shadow: 0px 0px 6px black;
+  color: white;
+}
+*/
+#copyright {
+  /*text-shadow: 0px 0px 3px black;*/
+font-size: 12px;  
+color: #aaa;
+  text-align: center;
+  padding-top: 10px;
+  /*
+  position: absolute;
+  bottom: 0;
+  width: 100%;*/
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.alert {
+    margin-top: 10px;
 }
 
 .container {
@@ -20,13 +52,17 @@ body {
 }
 
 .form-signin {
-  width: 330px;
-  padding: 15px;
+  text-align: center;
+  /*max-width: 380px;
+  min-width: 330px;
+*/  
+width: 330px;
+  padding: 10px;
   margin: 0 auto;
   position: absolute;
   top: 50%;
   right: 50%;
-  transform: translate(50%,-50%);
+  transform: translate(50%,50%);
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
