--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*body {
+body {
     padding-top: 70px;
 }
-*/
+
 table {
     border-collapse: collapse;
     width: 100%;
@@ -13,6 +13,7 @@ th, td {
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(odd){background-color: #fff}
 
 th {
     background-color: #4CAF50;
